--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "express": "^4.17.1",
     "multer": "^1.4.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev":  "node server.js"
   },
   "repository": {
     "type": "git",
