--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parse": "^0.1.0",
     "cookie-parse": "^0.4.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "multer": "^1.4.2"
   },
@@ -15,7 +16,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev":  "node server.js"
+    "dev": "node server.js"
   },
   "repository": {
     "type": "git",
