--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@googlemaps/google-maps-services-js": "^3.1.16",
     "body-parse": "^0.1.0",
     "cookie-parse": "^0.4.0",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "multer": "^1.4.2"
