--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "mongo": "^0.1.0",
     "multer": "^1.4.2"
   },
   "devDependencies": {
