--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mongodb": "^3.6.4",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "random-words": "^1.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
