--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "express": "^4.17.1",
     "mongodb": "^3.6.4",
     "multer": "^1.4.2",
-    "random-words": "^1.1.1"
+    "random-words": "^1.1.1",
+    "sentencer": "^0.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
