--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mongodb": "^3.6.4",
     "multer": "^1.4.2",
     "random-words": "^1.1.1",
-    "sentencer": "^0.2.1"
+    "sentencer": "^0.2.1",
+    "spherical-geometry-js": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
